Fixed bug where the user wouldn't get double points on the server side if the dbl points joker was used after he answered. Names in emoji chat are more visible

--- a/client/src/main/resources/client.css/questions.css
+++ b/client/src/main/resources/client.css/questions.css
@@ -50,7 +50,14 @@
 }
 
 .emojiChat{
-    -fx-background-color: #ffc5ac;
+    -fx-background-color: transparent;
+}
+.emojiChat .scroll-bar:vertical{
+    -fx-opacity: 0;
+}
+.list-cell{
+    -fx-background-color: transparent;
+    -fx-font-size: 1.5em;
 }
 
 .questionsLeftLabel{
